--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,34 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="signup-form">
 
-<form action="signup" method="post" modelAttribute="user">
-    <div class="container">
+<form action="signUpForm" method="post">
+    <div class="container pt-4 bg-dark">
         <div class="row d-flex justify-content-center">
             <div class="col-6">
-                <img th:src="@{/images/flashcash.png}"/>
+                <img th:src="@{/images/flashcash.png}" class="img-fluid"/>
             </div>
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-6">
                 <div class="form-group">
                     <label for="firstname">First name</label>
-                    <input type="text" class="form-control" id="firstname" placeholder="firstname">
+                    <input type="text" class="form-control" id="firstname" name="firstName" placeholder="firstname">
                 </div>
                 <div class="form-group">
                     <label for="lastname">Last name</label>
-                    <input type="text" class="form-control" id="lastname" placeholder="lastname">
+                    <input type="text" class="form-control" id="lastname" name="lastName" placeholder="lastname">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <label for="exampleInputEmail1">email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                    <label for="password2">Repeat your password</label>
+                    <input type="password" class="form-control" id="password2" placeholder="Repeat your password">
+                </div>
+                <div class="form-group pt-2 pb-5">
+                    <input type="submit" value="SIGNUP" class="btn btn-primary btn-lg">
                 </div>
 
-                <input type="submit" class="btn btn-primary">
             </div>
         </div>
+    </div>
 </form>
+
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">-->
+<!--            <div class="card-img-left d-none d-md-flex"></div>-->
+<!--            <div class="card-body p-4 p-sm">-->
+<!--                <div class="logo-card">-->
+<!--                    <img src="" class="logo" th:src="@{/images/logo/png}" alt="">-->
+<!--                </div>-->
+<!--                <h4 class="card-title text-center mb-5 fw-light fs-5">SIGN UP</h4>-->
+<!--                <form th:action="@{/signup}" th:object="${signUpForm}" method="POST">-->
+<!--                    <div class="form-floating mb-3">-->
+<!--                        <input type="text" th:field="*{firstname}" class="form-control floatingInput" id="floatingInputFirstName" placeholder="First Name"/>-->
+<!--                        <label for="floatingInputFirstName">First Name</label>-->
+<!--                    </div>-->
+<!--                    <div class="form-floating mb-3">-->
+<!--                        <input type="text" th:field="*{firstname}" class="form-control floatingInput" id="floatingInputLastName" placeholder="First Name"/>-->
+<!--                        <label for="floatingInputLastName">First Name</label>-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 </body>
