--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Signup result</h1>
-<p th:text="'First name: ' + ${user.firstName}" />
-<p th:text="'Last name: ' + ${user.lastName}" />
-<p th:text="'Email: ' + ${user.email}" />
+<!--<p th:text="'First name: ' + ${user.firstName}" />-->
+<!--<p th:text="'Last name: ' + ${user.lastName}" />-->
+<!--<p th:text="'Email: ' + ${user.email}" />-->
 </body>
 </html>
