All spring security configuration for signup and add AuthentificationService, McvConfig

--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,12 +2,10 @@
 <html lang="fr" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Signup result</title>
+    <title>Signin</title>
 </head>
 <body>
-<h1>Signup result</h1>
-<!--<p th:text="'First name: ' + ${user.firstName}" />-->
-<!--<p th:text="'Last name: ' + ${user.lastName}" />-->
-<!--<p th:text="'Email: ' + ${user.email}" />-->
+<h1>Signin Page</h1>
+
 </body>
 </html>
