--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,7 +9,7 @@
 <body class="signup-form">
 
 <form th:action="@{/signup}" th:object="${signUpForm}" method="POST">
-    <div class="container pt-4 bg-dark">
+    <div class="container pt-4">
         <div class="row d-flex justify-content-center">
             <div class="col-6">
                 <img th:src="@{/images/flashcash.png}" class="img-fluid"/>
@@ -33,10 +33,10 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="password">
                 </div>
-                <div class="form-group">
-                    <label for="password2">Repeat your password</label>
-                    <input type="password" class="form-control" id="password2" placeholder="Repeat your password">
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label for="password2">Repeat your password</label>-->
+<!--                    <input type="password" class="form-control" id="password2" placeholder="Repeat your password">-->
+<!--                </div>-->
                 <div class="form-group pt-2 pb-5">
                     <input type="submit" value="SIGNUP" class="btn btn-primary btn-lg">
                 </div>
