--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Signin</title>
+    <title>Flash Cash Sign In</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-<h1>Signin Page</h1>
+<body class="signin-form">
+
+<form th:action="@{/signin}" th:object="${SignInForm}" method="POST">
+    <div class="container pt-4">
+        <div class="row d-flex justify-content-center">
+            <div class="col-6">
+                <img th:src="@{/images/flashcash.png}" class="img-fluid"/>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group pt-2 pb-5">
+                    <input type="submit" value="SIGN IN" class="btn btn-primary btn-lg">
+                </div>
+
+            </div>
+        </div>
+    </div>
+</form>
 
 </body>
 </html>
