--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html xmlns:th="https://thymeleaf.org">
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -8,14 +9,69 @@
     <title>Flash Cash - Home page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <div class="container pt-4">
-        <div class="row d-flex justify-content-center">
-            <h4 class="text-center mt-3 mb-5">Welcome to Flash Cash application</h4>
-            <div class="col-6">
-                <img th:src="@{/images/flashcash.png}" class="img-fluid"/>
-            </div>
+<body class="container navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <a class="navbar-brand" href="/index" th:href="@{/index}">
+            <img th:src="@{/images/flashcash.png}" width="120" height="60" class="d-inline-block align-top" alt="">
+        </a>
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/index" th:href="@{/index}">Home</a>
+            <a class="nav-item nav-link" href="#">Trasfers</a>
+            <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">Profile</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="#">Log out</a>
         </div>
     </div>
+    <div>
+        <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">
+            <p th:text="${user.email}"></p>
+        </a>
+    </div>
+</nav>
+
+        <!-- ============================================================================ -->
+        <!-- This content is only used for static prototyping purposes (natural templates)-->
+        <!-- and is therefore entirely optional, as this markup fragment will be included -->
+        <!-- from "fragments/header.html" at runtime.                                     -->
+        <!-- ============================================================================ -->
+<!--    <div th:replace="fragments/header :: header"> </div>-->
+    <div class="container">
+        <div class="row d-flex justify-content-between">
+            <div class="col-4">
+                <div class="hero-unit mt-5">
+                    <h2>Bonjour</h2>
+                    <h4 class="card-text text-primary" th:text="${user.firstName} + ' ' + ${user.lastName}"></h4>
+                    <div class="card mt-5" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Your solde</h5>
+                            <h2 class="card-text pt-4" th:text="${user.account.amount} + '€'"></h2>
+                            <a href="#" class="btn btn-primary mt-3">Recharge your account</a>
+                        </div>
+                    </div>
+                </div>
+                <h5 class="mt-5">Share the QrCode to receive money</h5>
+                <img th:src="@{/images/qrcode.png}" class="" alt="...">
+            </div>
+            <div class="col-6">
+                <img th:src="@{/images/friends.jpg}" class="img-fluid float-end me-2 h-auto rounded " alt="...">
+            </div>
+
+        </div>
+
+<!--        <div th:replace="fragments/footer :: footer">&copy; 2016 The Static Templates</div>-->
+    </div>
+
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3 mt-4">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQS</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Why using Flash Cash</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Live chat</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact us</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Team</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2023 Flash Cash, Inc</p>
+    </footer>
+
 </body>
 </html>
