--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -8,7 +8,7 @@
 </head>
 <body class="signin-form">
 
-<form th:action="@{/signin}" th:object="${SignInForm}" method="POST">
+<form th:action="@{/signin}" method="POST">
     <div class="container pt-4">
         <div class="row d-flex justify-content-center">
             <div class="col-6">
@@ -25,10 +25,11 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="password">
                 </div>
-                <div class="form-group pt-2 pb-5">
+                <div class="form-group pt-2 pb-1">
                     <input type="submit" value="SIGN IN" class="btn btn-primary btn-lg">
                 </div>
-
+<!--                <a type="button" href="signup.html" class="btn btn-link">You don't have an account ? create one here</a>-->
+                <a href="/signup" th:href="@{/signup}" class="btn btn-link">You don't have an account ? create one here</a>
             </div>
         </div>
     </div>
