--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -37,10 +37,10 @@
 <!--                    <label for="password2">Repeat your password</label>-->
 <!--                    <input type="password" class="form-control" id="password2" placeholder="Repeat your password">-->
 <!--                </div>-->
-                <div class="form-group pt-2 pb-5">
+                <div class="form-group pt-2 pb-1">
                     <input type="submit" value="SIGNUP" class="btn btn-primary btn-lg">
                 </div>
-
+                <a href="/signin" th:href="@{/signin}" class="btn btn-link">You have an account ? connect here</a>
             </div>
         </div>
     </div>
