--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,15 +17,15 @@
         </a>
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/index" th:href="@{/index}">Home</a>
-            <a class="nav-item nav-link" href="#">Trasfers</a>
+            <a class="nav-item nav-link" href="#">Transfers</a>
             <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">Profile</a>
             <a class="nav-item nav-link" href="#">Contact</a>
-            <a class="nav-item nav-link" href="#">Log out</a>
         </div>
     </div>
-    <div>
+    <div class="d-flex align-content-center">
         <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">
             <p th:text="${user.email}"></p>
+            <a class="nav-item nav-link text-danger" href="#">Log out</a>
         </a>
     </div>
 </nav>
@@ -54,7 +54,7 @@
                 <img th:src="@{/images/qrcode.png}" class="" alt="...">
             </div>
             <div class="col-6">
-                <img th:src="@{/images/friends.jpg}" class="img-fluid float-end me-2 h-auto rounded " alt="...">
+                <img th:src="@{/images/Card-01.png}" class="img-fluid float-end me-2 h-auto rounded " alt="...">
             </div>
 
         </div>
