Add cash features + add-cash view

--- a/src/main/resources/templates/add-iban.html
+++ b/src/main/resources/templates/add-iban.html
@@ -14,11 +14,11 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex align-items-center">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <a class="navbar-brand" href="/index" th:href="@{/index}">
+      <a class="navbar-brand" href="/" th:href="@{/index}">
         <img th:src="@{/images/flashcash.png}" width="120" height="60" class="d-inline-block align-top" alt="">
       </a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/index" th:href="@{/index}">Home</a>
+        <a class="nav-item nav-link active" href="/" th:href="@{/}">Home</a>
         <a class="nav-item nav-link" href="#">Transfers</a>
         <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">Profile</a>
         <a class="nav-item nav-link" href="#">Contact</a>
