--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
             <img th:src="@{/images/flashcash.png}" width="120" height="60" class="d-inline-block align-top" alt="">
         </a>
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="/index" th:href="@{/index}">Home</a>
+            <a class="nav-item nav-link active" href="/" th:href="@{/}">Home</a>
             <a class="nav-item nav-link" href="#">Transfers</a>
             <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">Profile</a>
             <a class="nav-item nav-link" href="#">Contact</a>
