Withdraw features OK

--- a/src/main/resources/templates/add-cash.html
+++ b/src/main/resources/templates/add-cash.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/index.css">
 </head>
-<body class="container h-100">
-<header>
+<body class="container navbar-expand-lg navbar-light bg-light">
 
+<header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex align-items-center">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <a class="navbar-brand" href="/index" th:href="@{/index}">
@@ -20,7 +20,7 @@
       </a>
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/" th:href="@{/}">Home</a>
-        <a class="nav-item nav-link" href="#">Transfers</a>
+        <a class="nav-item nav-link" href="/transfers" th:href="@{/transfers}">Transfers</a>
         <a href="/profile" th:href="@{/profile}" class="nav-item nav-link">Profile</a>
         <a class="nav-item nav-link" href="#">Contact</a>
       </div>
@@ -32,7 +32,6 @@
       </a>
     </div>
   </nav>
-
 </header>
 
 <h1 class="text-center mt-5 mb-5">Add cash to you Account</h1>
