--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="signin-form">
+<body class="signin-form container navbar-expand-lg navbar-light bg-light">
 
 <form th:action="@{/signin}" method="POST">
     <div class="container pt-4">
