--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="signup-form">
+<body class="signup-form container navbar-expand-lg navbar-light bg-light">
 
 <form th:action="@{/signup}" th:object="${signUpForm}" method="POST">
     <div class="container pt-4">
