--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="container navbar-expand-lg navbar-light bg-light">
 
-<header>
+<header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex align-items-center">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <a class="navbar-brand" href="/index" th:href="@{/index}">
